--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   firebase_storage: ^12.4.10
   image_picker: ^1.1.2
   file_picker: ^10.2.0
+  firebase_messaging: ^15.2.10
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
