--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.3' # Includes Dart 3.8.1 (required by your app)
+          flutter-version: '3.32.8'  # Includes Dart 3.8.1
 
       - name: Cache Flutter pub packages
         uses: actions/cache@v3
